force-app/main/default/objects/SubUser_Device__c/SubUser_Device__c.object-meta.xml
<CustomObject>
    <label>SubUser Device</label>
    <nameField>
        <label>SubUser Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubUser Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>