force-app/main/default/objects/SubUser_Device__c/fields/LastUsedTime__c.field-meta.xml
<CustomField>
    <fullName>LastUsedTime__c</fullName>
    <label>LastUsedTime</label>
    <type>DateTime</type>
</CustomField>