force-app/main/default/objects/SubUser_Device__c/fields/SubUserID__c.field-meta.xml
<CustomField>
    <fullName>SubUserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubUserID</label>
    <referenceTo>SubUser__c</referenceTo>
    <relationshipLabel>SubUser Devices</relationshipLabel>
    <relationshipName>SubUser_Devices1</relationshipName>
    <type>Lookup</type>
</CustomField>